crates/wac-parser/tests/resolution/fail/missing-access-export.wac
package test:comp;

import i: interface {

};

let x = i.foo;
